[gd_scene load_steps=7 format=3 uid="uid://ctiqao37r366j"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_nf4fw"]
[ext_resource type="AudioStream" uid="uid://6q2ahr4kadca" path="res://audio/walking.mp3" id="2_im3o1"]
[ext_resource type="AudioStream" uid="uid://dy1qmfn6drtn1" path="res://audio/enter_picture.mp3" id="2_jik03"]
[ext_resource type="AudioStream" uid="uid://bd181yxba7r4a" path="res://audio/leave_picture.mp3" id="3_bp75x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_peu6o"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_atgqe"]
radius = 0.4
height = 1.8

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
collision_mask = 15
script = ExtResource("1_nf4fw")
enter_picture_sound = ExtResource("2_jik03")
leave_picture_sound = ExtResource("3_bp75x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_peu6o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_atgqe")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31224, -0.268136)

[node name="InteractRay" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 32

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="WalkingSoundPlayer" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_im3o1")

[node name="OtherSoundPlayer" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
